--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "app-plus-test",
+  "name": "app-plus-plugin-skeleton",
   "version": "1.0.0",
   "description": "",
   "main": "app-plus-plugin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
