--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "bugs": {
     "url": "https://github.com/karsten-bruckmann/app-plus-plugin-skeleton/issues"
   },
-  "homepage": "https://github.com/karsten-bruckmann/app-plus-plugin-skeleton#readme"
+  "homepage": "https://github.com/karsten-bruckmann/app-plus-plugin-skeleton#readme",
+  "scripts": {
+    "postinstall": "touch postinstall.sh"
+  }
 }
